# pulseaudio-mic-state

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  main.rs
