[package]
name = "pulseaudio-mic-state"
version = "0.1.0"
authors = ["Joshua Chapman <joshua.samuel.chapman@protonmail.com>"]
description = "Gets the microphone state from pulseaudio."
repository = "https://github.com/joshuachp/pulseaudio-mic-state"
edition = "2018"
license = "MIT"

[dependencies]
clap = "2"
pulse = { version = "2", package = "libpulse-binding"}
